--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     
+    <h1>I can push to github</h1>
+    <h2>Mama i can code now</h2>
+    <h3>New code changed</h3>
 </body>
 </html>
