--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     <h3>New code changed to orange</h3>
     <p>More paragraph</p>
     <p>I am coding coding and coding</p>
+    <img src="GreatHarry.jpg" alt="">
+    <img src="HarryPotter.jpg" alt="">
+    <img src="HarryPotter3.webp" alt="">
+    <img src="HarryPotter2.jpg" alt="">
 </body>
 </html>
