--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <img src="HarryPotter.jpg" alt="">
     <img src="HarryPotter3.webp" alt="">
     <img src="HarryPotter2.jpg" alt="">
+    <img src="images/ThreeFriends.webp" alt="">
+    <img src="images/CuteHarry.webp" alt="">
 </body>
 </html>
